error.txt
DEBUG ENV TYPES after registration:[
"string" "bool" "null" "tuple" "list" "struct" "func" "int" "float" ]
[ADVANCE] Current: print (type=print, line=1, lexeme="print")[STATMENT] At: <nil> Current: print (type=print, line=1, lexeme="print")[ADVANCE] Current: ( (type=(, line=1, lexeme="(")[ADVANCE] Current: NUMBER (type=NUMBER, line=1, lexeme="42")[ADVANCE] Current: ) (type=), line=1, lexeme=")")[ADVANCE] Current: EOF (type=EOF, line=1, lexeme="")llc: error: llc: sourcetest.ll:2:33: error: constant expression type mismatch: got type '[5 x i8]' but expected '[4 x i8]'
        @print.str = constant [4 x i8] c"%\d\0A\00"
                                       ^
llc failed: exit status 1